--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,20 @@
 body {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .jumbotron img {
-    width: 25%;
+  width: 25%;
 }
 
+/* #gambarw {
+  background-size: cover;
+} */
+
 section {
-    min-height: 420px;
+  min-height: 420px;
 }
 
 footer {
-    min-height: 50px;
-    padding-top:12px;
+  min-height: 50px;
+  padding-top: 12px;
 }
